<resources>
    <string name="app_name">NewsSearch</string>
    <string name="action_settings">Settings</string>
    <string name="enter_query">Enter a search query here...</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="arts">Arts</string>
    <string name="fashion">Fashion</string>
    <string name="sports">Sports</string>
    <string name="begin_date">Begin Date</string>
    <string name="newest_first">Newest First</string>
    <string name="sort">Sort</string>
    <string name="apply">Apply</string>
    <string name="loading">Loading...</string>
    <string name="no_article_information">No article information available.</string>
    <string name="network_disconnected">The network is not available.</string>
</resources>
