<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/frBeginDate"
            app:actionLayout="@layout/widget_begin_date"
            android:title="@string/begin_date" />

        <item
            android:id="@+id/frSortOrder"
            android:title="@string/sort"
            app:actionLayout="@layout/widget_switch" />

        <item
            android:id="@+id/frArts"
            app:actionLayout="@layout/widget_check"
            android:title="@string/arts" />
        <item
            android:id="@+id/frFashion"
            app:actionLayout="@layout/widget_check"
            android:title="@string/fashion" />
        <item
            android:id="@+id/frSports"
            app:actionLayout="@layout/widget_check"
            android:title="@string/sports" />

    </group>

</menu>